# Animus

./: CMakeLists.txt  README.md  gst_connect_settings.ini  images.qrc  joypad.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  planeview.cpp  planeview.h  planeview.ui  worker.cpp  worker.h
